[package]
name = "xberg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Command-line interface for Xberg document intelligence"
license.workspace = true
repository.workspace = true
homepage = "https://xberg.io"
documentation = "https://docs.xberg.io"
keywords = ["document", "extraction", "cli", "tool", "parser"]
categories = ["command-line-utilities", "text-processing"]

[package.metadata.cargo-machete]
ignored = ["serde_toon_format"]

[[bin]]
name = "xberg"
path = "src/main.rs"

[features]
default = [
    "embeddings",
    "html",
    "url-ingestion",
    "liter-llm",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "chunking-tokenizers",
    "tree-sitter",
]
ort-bundled = ["xberg/ort-bundled"]
# Load ONNX Runtime at runtime (dlopen) instead of static-linking a prebuilt.
# The x86_64-apple-darwin CLI is built with the normal default features PLUS
# this, so it keeps full feature parity with the aarch64 CLI: ort-sys
# `disable-linking` (pulled by load-dynamic) short-circuits its build script
# before the (nonexistent) x86_64-mac prebuilt is ever resolved. ort finds
# libonnxruntime.dylib relative to the executable, so the release tarball just
# ships the dylib next to the `xberg` binary — no ORT_DYLIB_PATH needed.
ort-dynamic = ["xberg/ort-dynamic"]

# Native Intel macOS (x86_64-apple-darwin) platform aggregate. Passthrough to
# the xberg `macos-intel-target` set (full feature parity, ort loaded
# dynamically). Used by the bindings via alef target overrides; the CLI release
# build instead keeps its default features and adds `ort-dynamic` for exact
# parity with the aarch64 CLI.
macos-intel = ["xberg/macos-intel-target"]

ocr = ["xberg/ocr"]

api = ["xberg/api"]
process-api = ["xberg/process-api"]
mcp = ["xberg/mcp"]
mcp-http = ["xberg/mcp-http"]
embeddings = ["xberg/embeddings"]
paddle-ocr = ["xberg/paddle-ocr"]
candle-ocr = ["xberg/candle-ocr"]
candle-trocr = ["xberg/candle-trocr"]
candle-paddleocr-vl = ["xberg/candle-paddleocr-vl"]
candle-glm-ocr = ["xberg/candle-glm-ocr"]
candle-hunyuan-ocr = ["xberg/candle-hunyuan-ocr"]
candle-deepseek-ocr = ["xberg/candle-deepseek-ocr"]
candle-vlm-ocr = ["xberg/candle-vlm-ocr"]
candle-cuda = ["xberg/candle-cuda"]
candle-metal = ["xberg/candle-metal"]
candle-accelerate = ["xberg/candle-accelerate"]
candle-mkl = ["xberg/candle-mkl"]
layout-detection = ["xberg/layout-detection"]
chunking-tokenizers = ["xberg/chunking-tokenizers"]
html = ["xberg/html"]
url-ingestion = ["xberg/url-ingestion"]
liter-llm = ["xberg/liter-llm"]
tree-sitter = ["xberg/tree-sitter", "dep:tree-sitter-language-pack"]
ner-onnx = ["xberg/ner-onnx"]
ner-llm = ["xberg/ner-llm"]
ner-candle = ["xberg/ner-candle"]
heic = ["xberg/heic"]
all = [
    "default",
    "api",
    "heic",
    "html",
    "url-ingestion",
    "mcp",
    "mcp-http",
    "chunking-tokenizers",
    "tree-sitter",
    "liter-llm",
]

[dependencies]

anstyle = "1"
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = "4.6"
serde = { workspace = true }
serde_json = { workspace = true }
serde_toon_format = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter-language-pack = { workspace = true, features = ["dynamic-loading", "download", "serde"], optional = true }
xberg = { workspace = true, features = ["formats", "analysis", "tokio-runtime", "simd-utf8", "cli"] }

[dev-dependencies]
bytes = { workspace = true }
tempfile = { workspace = true }
ureq = { version = "3.3", features = ["json"] }
