[package]
name = "xberg-ffi"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "ocr", "pdf", "text"]
categories = []
repository = "https://github.com/xberg-io/xberg"

# `serde_json`, `ahash`, and `tokio` are emitted unconditionally above so the
# manifest is stable across regens (and so the C FFI codegen can pull them in
# when an async / Result-typed function appears in the API surface), but for
# umbrella crates with no async fns and no JSON-marshalled return types they
# are genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the generated
# FFI shim.
[package.metadata.cargo-machete]
ignored = ["ahash", "serde_json", "tokio", "async-trait"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "markdown-footnotes", "redaction", "enrichment", "heuristics", "presets", "structured", "url-ingestion"]
full = ["xberg/full"]
pdf = ["xberg/pdf"]
ocr = ["xberg/ocr"]
paddle-ocr = ["xberg/paddle-ocr"]
paddle-ocr-types = ["xberg/paddle-ocr-types"]
layout-detection = ["xberg/layout-detection"]
layout-types = ["xberg/layout-types"]
embeddings = ["xberg/embeddings"]
embedding-presets = ["xberg/embedding-presets"]
reranker = ["xberg/reranker"]
reranker-presets = ["xberg/reranker-presets"]
chunking = ["xberg/chunking"]
keywords-yake = ["xberg/keywords-yake"]
keywords-rake = ["xberg/keywords-rake"]
language-detection = ["xberg/language-detection"]
html = ["xberg/html"]
tree-sitter = ["xberg/tree-sitter"]
office = ["xberg/office"]
email = ["xberg/email"]
archives = ["xberg/archives"]
stopwords = ["xberg/stopwords"]
auto-rotate = ["xberg/auto-rotate"]
auto-rotate-types = ["xberg/auto-rotate-types"]
tokio-runtime = ["xberg/tokio-runtime"]
api = ["xberg/api"]
api-types = ["xberg/api-types"]
mcp = ["xberg/mcp"]
liter-llm = ["xberg/liter-llm"]
quality = ["xberg/quality"]
svg = ["xberg/svg"]
transcription = ["xberg/transcription"]
transcription-types = ["xberg/transcription-types"]
classification = ["xberg/classification"]
captioning = ["xberg/captioning"]
ner-onnx = ["xberg/ner-onnx"]
ner-llm = ["xberg/ner-llm"]
diff = ["xberg/diff"]
markdown-footnotes = ["xberg/markdown-footnotes"]
redaction = ["xberg/redaction"]
enrichment = ["xberg/enrichment"]
heuristics = ["xberg/heuristics"]
presets = ["xberg/presets"]
structured = ["xberg/structured"]
url-ingestion = ["xberg/url-ingestion"]
android-target = ["xberg/android-target", "api", "api-types", "archives", "auto-rotate-types", "captioning", "chunking", "classification", "diff", "email", "embedding-presets", "enrichment", "heuristics", "html", "keywords-rake", "keywords-yake", "language-detection", "layout-types", "liter-llm", "markdown-footnotes", "mcp", "ner-llm", "ocr", "office", "paddle-ocr-types", "pdf", "presets", "quality", "redaction", "reranker-presets", "stopwords", "structured", "svg", "tokio-runtime", "transcription-types", "tree-sitter"]

[dependencies]
ahash = "0.8"
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "windows")))'.dependencies]
xberg = { path = "../xberg", version = "1.0.0-rc.1", features = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "markdown-footnotes", "redaction", "enrichment", "heuristics", "presets", "structured", "url-ingestion"] }

[target.'cfg(target_os = "android")'.dependencies]
xberg = { path = "../xberg", version = "1.0.0-rc.1", features = ["android-target"] }

[target.'cfg(target_os = "ios")'.dependencies]
xberg = { path = "../xberg", version = "1.0.0-rc.1", features = ["android-target"] }

[target.'cfg(target_os = "windows")'.dependencies]
xberg = { path = "../xberg", version = "1.0.0-rc.1", features = ["windows-target"] }


[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
