[package]
name = "xberg-gliner-candle"
version.workspace = true
edition = "2024"
rust-version.workspace = true
authors.workspace = true
description = "Candle-based GLiNER2 inference with runtime PEFT LoRA adapter merge-at-load."
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
keywords = ["nlp", "ner", "gliner", "candle", "lora"]
categories = ["text-processing"]

[lib]
name = "xberg_gliner_candle"
path = "src/lib.rs"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# ORT backend selection — pass through to xberg-gliner. One of these must be
# active for tests and binaries to link (ORT symbols are unconditional in
# xberg-gliner). Use ort-bundled in dev; ort-dynamic when a system ORT is
# guaranteed present.
ort-bundled = ["xberg-gliner/ort-bundled"]
ort-dynamic = ["xberg-gliner/ort-dynamic"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
ndarray = "0.17"
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
xberg-gliner = { workspace = true, default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
wasm-bindgen-test = "0.3"

[lints]
workspace = true
