[package]
name = "xberg-php"
version = "1.0.0-rc.1"
edition = "2024"
license = "MIT"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "ocr", "pdf", "text"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "async-trait"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []
default = ["api", "api-types", "auto-rotate-types", "captioning", "chunking", "chunking-tokenizers", "classification", "diff", "embedding-presets", "embeddings", "enrichment", "heic", "heuristics", "html", "keywords-rake", "keywords-yake", "layout-types", "liter-llm", "markdown-footnotes", "ner-llm", "ner-onnx", "ocr", "ocr-wasm", "office", "paddle-ocr-types", "pdf", "presets", "quality", "redaction", "reranker", "reranker-presets", "structured", "svg", "tokio-runtime", "transcription-types", "tree-sitter", "url-ingestion", "xml"]
api = ["xberg/api"]
api-types = ["xberg/api-types"]
auto-rotate-types = ["xberg/auto-rotate-types"]
captioning = ["xberg/captioning"]
chunking = ["xberg/chunking"]
chunking-tokenizers = ["xberg/chunking-tokenizers"]
classification = ["xberg/classification"]
diff = ["xberg/diff"]
embedding-presets = ["xberg/embedding-presets"]
embeddings = ["xberg/embeddings"]
enrichment = ["xberg/enrichment"]
heic = ["xberg/heic"]
heuristics = ["xberg/heuristics"]
html = ["xberg/html"]
keywords-rake = ["xberg/keywords-rake"]
keywords-yake = ["xberg/keywords-yake"]
layout-types = ["xberg/layout-types"]
liter-llm = ["xberg/liter-llm"]
markdown-footnotes = ["xberg/markdown-footnotes"]
ner-llm = ["xberg/ner-llm"]
ner-onnx = ["xberg/ner-onnx"]
ocr = ["xberg/ocr"]
ocr-wasm = ["xberg/ocr-wasm"]
office = ["xberg/office"]
paddle-ocr-types = ["xberg/paddle-ocr-types"]
pdf = ["xberg/pdf"]
presets = ["xberg/presets"]
quality = ["xberg/quality"]
redaction = ["xberg/redaction"]
reranker = ["xberg/reranker"]
reranker-presets = ["xberg/reranker-presets"]
structured = ["xberg/structured"]
svg = ["xberg/svg"]
tokio-runtime = ["xberg/tokio-runtime"]
transcription-types = ["xberg/transcription-types"]
tree-sitter = ["xberg/tree-sitter"]
url-ingestion = ["xberg/url-ingestion"]
xml = ["xberg/xml"]

[dependencies]
async-trait = "0.1"
ext-php-rs = "0.15.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
xberg = { version = "1.0.0-rc.1", path = "../xberg", features = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "markdown-footnotes", "redaction", "enrichment", "heuristics", "presets", "structured", "url-ingestion"] }
