[package]
name = "xberg-php"
version = "1.0.0-rc.18"
edition = "2024"
license = "MIT"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "ocr", "pdf", "text"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "async-trait"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []
default = ["api", "api-types", "auto-rotate-types", "chunking-tokenizers", "diff", "embedding-presets", "heuristics", "html", "keywords-rake", "keywords-yake", "late-interaction", "late-interaction-presets", "layout-types", "liter-llm", "markdown-footnotes", "ocr", "ocr-wasm", "office", "paddle-ocr-types", "pdf", "presets", "quality", "redaction", "reranker", "reranker-presets", "sparse-embedding-presets", "sparse-embeddings", "svg", "tokio-runtime", "transcription-types", "tree-sitter", "url-config-types", "url-ingestion", "xml"]
api = ["xberg/api"]
api-types = ["xberg/api-types"]
auto-rotate-types = ["xberg/auto-rotate-types"]
chunking-tokenizers = ["xberg/chunking-tokenizers"]
diff = ["xberg/diff"]
embedding-presets = ["xberg/embedding-presets"]
heuristics = ["xberg/heuristics"]
html = ["xberg/html"]
keywords-rake = ["xberg/keywords-rake"]
keywords-yake = ["xberg/keywords-yake"]
late-interaction = ["xberg/late-interaction"]
late-interaction-presets = ["xberg/late-interaction-presets"]
layout-types = ["xberg/layout-types"]
liter-llm = ["xberg/liter-llm"]
markdown-footnotes = ["xberg/markdown-footnotes"]
ocr = ["xberg/ocr"]
ocr-wasm = ["xberg/ocr-wasm"]
office = ["xberg/office"]
paddle-ocr-types = ["xberg/paddle-ocr-types"]
pdf = ["xberg/pdf"]
presets = ["xberg/presets"]
quality = ["xberg/quality"]
redaction = ["xberg/redaction"]
reranker = ["xberg/reranker"]
reranker-presets = ["xberg/reranker-presets"]
sparse-embedding-presets = ["xberg/sparse-embedding-presets"]
sparse-embeddings = ["xberg/sparse-embeddings"]
svg = ["xberg/svg"]
tokio-runtime = ["xberg/tokio-runtime"]
transcription-types = ["xberg/transcription-types"]
tree-sitter = ["xberg/tree-sitter"]
url-config-types = ["xberg/url-config-types"]
url-ingestion = ["xberg/url-ingestion"]
xml = ["xberg/xml"]

[dependencies]
async-trait = "0.1"
crawlberg = { default-features = false, version = "1.0.3" }
ext-php-rs = "0.15.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
xberg = { version = "1.0.0-rc.18", path = "../xberg", features = ["macos-intel-target"] }

[target.'cfg(not(any(target_os = "windows", all(target_os = "macos", target_arch = "x86_64"))))'.dependencies]
xberg = { version = "1.0.0-rc.18", path = "../xberg", features = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "sparse-embeddings", "sparse-embedding-presets", "late-interaction", "late-interaction-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "markdown-footnotes", "redaction", "enrichment", "heuristics", "presets", "structured", "url-ingestion"] }

[target.'cfg(target_os = "windows")'.dependencies]
xberg = { version = "1.0.0-rc.18", path = "../xberg", features = ["windows-target"] }
